fixed background image distortion

--- a/src/style.css
+++ b/src/style.css
@@ -921,7 +921,12 @@ button:hover {
         font-size: 1.2rem;
     }
 
-
+    .about-content{
+        border: 4px solid #121212;
+        background-image: none;
+        background: white;
+        border-radius: 10px;
+    }
 }
 
 
@@ -941,10 +946,16 @@ button:hover {
         margin-top: 3%;
     }
 
+    .about-content p {
+        font-size: 1rem;
+    }
+
     .animation {
         align-self: center;
         transform: scale(1);
     }
+
+
 }
 
 @media (max-width: 391px){
@@ -971,6 +982,7 @@ button:hover {
     .about-container p {
         font-size: 1rem;
     }
+
 
 
 }
